Fix bottom spacing pb on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,6 @@ html {
 body {
 	padding: 20px;
 	padding-top: 53px;
-	padding-bottom: 100px;
 
 	font-family: "Lato", helvetica, arial, sans;
 	color: white;
@@ -125,6 +124,7 @@ ul {
 
 	list-style-type: none;
 	padding: 0;
+	padding-bottom: 50px;
 }
 
 ul li a {
@@ -163,16 +163,6 @@ ul li a img {
 	left: 0;
 
 	box-shadow: 0px 0px 5px black;
-}
-
-.contact {
-	margin-top: 40px;
-	text-align: center;
-	margin-bottom: 40px;
-}
-
-.contact a {
-	color: white;
 }
 
 @media screen and (max-width: 750px) {
